@@ -1,3 +1,15 @@
+2014-12-01  Tim Horton  <timothy_horton@apple.com>
+
+        Null deref under TextIndicator::createWithSelectionInFrame using find-in-page on bugzilla
+        https://bugs.webkit.org/show_bug.cgi?id=139164
+        <rdar://problem/19107247>
+
+        Reviewed by Beth Dakin.
+
+        * page/TextIndicator.cpp:
+        (WebCore::TextIndicator::createWithSelectionInFrame):
+        Null-check the ImageBuffer in addition to the Image.
+
 2014-12-01  Anders Carlsson  <andersca@apple.com>
 
         Remove IWebCookieManager on Windows
